--- a/zsh/config
+++ b/zsh/config
@@ -1,8 +1,7 @@
 autoload -U colors
 colors
 setopt prompt_subst
-PROMPT='
-%~ %{$fg_bold[black]%}$(vcprompt)
+PROMPT='%~ %{$fg_bold[white]%}$(vcprompt)
 → %{$reset_color%}'
 
 # Set RPROMPT to have info show up on the right, too.
