--- a/tmux.conf
+++ b/tmux.conf
@@ -1,28 +1,40 @@
-# Our .tmux.conf file
 # Setting the prefix from C-b to C-q
 set -g prefix C-q
 # Free the original Ctrl-b prefix keybinding
 unbind C-b
+
 #setting the delay between prefix and command
-set -sg escape-time 1
+set -sg escape-time 2
 # Ensure that we can send Ctrl-A to other apps
 bind C-q send-prefix
+
 # Set the base index for windows to 1 instead of 0
 set -g base-index 1
 # Set the base index for panes to 1 instead of 0
-setw -g pane-base-index 1
+set -g pane-base-index 1
+
 # Reload the file with Prefix r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
 # clear the current pane
 bind C-k send-keys -R
+
 # splitting panes
 bind | split-window -h
 bind - split-window -v
-# moving between panes
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+
+# # moving between panes
+# bind h select-pane -L
+# bind j select-pane -D
+# bind k select-pane -U
+# bind l select-pane -R
+
+# changer de panneau avec Alt-flèches
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
 # Quick pane selection
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
@@ -31,72 +43,101 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
 # mouse support - set to on if you want to use the mouse
-setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
-# Set the default terminal mode to 256color mode
-set -g default-terminal "screen-256color"
-# enable activity alerts
-setw -g monitor-activity on
-set -g visual-activity on
-# set the status line's colors
-set -g status-fg white
-set -g status-bg black
-# set the color of the window list
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
-# set colors for the active window
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
-# pane colors
-set -g pane-border-fg green
-set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg black
-# Command / message line
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
-# Status line left side
-set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-set -g status-utf8 on
-# Status line right side
-# 15% | 28 Nov 18:15
-set -g status-right "#(~/battery Discharging) | #[fg=cyan]%d %b %R"
-# Update the status bar every sixty seconds
-set -g status-interval 60
-# Center the window list
-set -g status-justify centre
-# enable vi keys.
-setw -g mode-keys vi
-# Open panes in the same directory using the tmux-panes script
-unbind v
-unbind n
-bind v send-keys " ~/tmux-panes -h" C-m
-bind n send-keys " ~/tmux-panes -v" C-m
-# Maximize and restore a pane
-unbind Up
-bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
-unbind Down
-bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
-# Log output to a text file on demand
-bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
+set -g mouse on
+# set -g mouse-select-pane on
+# set -g mouse-resize-pane on
+# set -g mouse-select-window on
 
-unbind [
-bind Escape copy-mode
-unbind p
-bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+set -s set-clipboard external
+# set -as terminal-features ',rxvt-unicode*:clipboard'
 
-# https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard.git
-set -g default-command "reattach-to-user-namespace -l /bin/zsh"
-# Copy current tmux buffer to clipboard
-bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-# Paste clipboard to current tmux buffer
-bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+# activer/désactiver la synchronisation des panneaux
+bind s set-window-option synchronize-panes
+
+#############
+### THEME ###
+#############
+
+# mode 256 couleurs
+set -g default-terminal "xterm-256color"
+
+# couleurs de bordure des panneaux
+set -g pane-border-style fg=colour238                                          
+ # premier plan de la bordure non active
+set -g pane-active-border-style fg=colour39                                                                             # premier plan de la bordure active
+
+# barre de status
+set -g status-interval 2                                                                                                # actualisation de la barre de status toutes les deux secondes
+set -g status-right '#{?client_prefix,#[fg=colour39]#[reverse]<Prefix>#[fg=colour245]#[noreverse],} %d/%m %H:%M:%S'     # format du texte de droite : préfixe si appuyé + date + heure
+set -g status-style fg=colour245                                                                                        # couleur du texte des éléments sur le côté
+set -g status-style bg=colour234                                                                                        # couleur de fond de la barre de status
+setw -g window-status-current-style fg=colour39,bold                                                                    # couleur texte onglet actif + onglet actif en gras
+setw -g window-status-style fg=colour245                                                                                # couleur texte onglet non actif
+setw -g window-status-activity-style fg=colour39                                                                        # couleur fond onglet avec activité non vue
+setw -g window-status-last-style fg=colour250                                                                           # couleur texte dernier onglet actif
+
+# mode commande
+set -g message-style fg=white                                                                                           # écriture en blanc
+set -g message-style bg=black                                                                                           # fond en noir
+
+
+# # Set the default terminal mode to 256color mode
+# set -g default-terminal "screen-256color"
+# # enable activity alerts
+# set -g monitor-activity on
+# set -g visual-activity on
+# # set the status line's colors
+# set -g status-fg white
+# set -g status-bg black
+# # set the color of the window list
+# set -g window-status-fg cyan
+# set -g window-status-bg default
+# set -g window-status-attr dim
+# # set colors for the active window
+# set -g window-status-current-fg white
+# set -g window-status-current-bg red
+# set -g window-status-current-attr bright
+# # pane colors
+# set -g pane-border-fg green
+# set -g pane-border-bg black
+# set -g pane-active-border-fg white
+# set -g pane-active-border-bg black
+# # Command / message line
+# set -g message-fg white
+# set -g message-bg black
+# set -g message-attr bright
+# # Status line left side
+# set -g status-left-length 40
+# set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+# set -g status-utf8 on
+# # Status line right side
+# # 15% | 28 Nov 18:15
+# # set -g status-right "#(~/battery Discharging) | #[fg=cyan]%d %b %R"
+# # Update the status bar every sixty seconds
+# set -g status-interval 60
+# # Center the window list
+# set -g status-justify centre
+
+
+
+# # enable vi keys.
+# set -g mode-keys vi
+# # Maximize and restore a pane
+# unbind Up
+# bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
+# unbind Down
+# bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
+# # Log output to a text file on demand
+# bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
+# 
+
+
+# Mode copy
+# unbind [
+# bind Escape copy-mode
+# 
+# bind -t vi-copy 'v' begin-selection
+# bind -t vi-copy 'y' copy-selection
+# 
